Add null-byte